style: estilizando página home

--- a/todoapp/templates/todoapp/view/home.html
+++ b/todoapp/templates/todoapp/view/home.html
@@ -1,12 +1,21 @@
 {% extends "global/default.html" %}
 {% block title %}{{title}}{% endblock title %}
 {% block content %}
-    <h2>Tasks:</h2>
-    <ul>
-    {% for task in tasks %}
-        <li>{{task.name}} - {{task.is_completed}}</li>
-    {% empty %}
-        <li>No tasks were found.</li>
-    {% endfor %}
-    </ul>
+    <div class="main-content-header text-center">
+        <h1>Your Tasks</h1>
+    </div>
+    <div class="main-content">
+        <div class="task-container-list">
+        {% for task in tasks %}
+            <div class="task-item-container {% if task.is_completed %}task-completed{% else %}task-pending{% endif %}">
+                <div class="task-item-status {% if task.is_completed %}task-completed{% else %}task-pending{% endif %}"></div>
+                <div class="task-item-name">{{task.name}}</div>
+            </div>
+        {% empty %}
+            <div class="d-block text-center">
+                <h3>Looks like you don't have any task.</h3>
+            </div>
+        {% endfor %}
+        </div>
+    </div>
 {% endblock content %}
