--- a/global_static/global/css/default.css
+++ b/global_static/global/css/default.css
@@ -1,14 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
 :root {
     --color-bg-light: #fefe;
     --color-dark: #2f2f2f;
+    --color-hover-side-link: #ebdfdf;
     --color-primary-red: #f57f7f;
     --color-dark-red: #af4646;
     --color-red: #da4d41;
+    --color-primary-blue: #6d71d6;
+    --color-primary-green: #62b668;
     --color-white: #fff;
     --color-pending: #cbcdd1;
-
+    --color-border: #bdbdbd;
     --padding-sm: 5px;
     --padding-md: 15px;
     --padding-lg: 30px;
@@ -18,20 +21,36 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+}
+
+h1,
+h2,
+h3 {
+    color:var(--color-dark);
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     background-color: var(--color-bg-light);
+}
+
+.fa-solid {
+    font-size: 20px;
 }
 
 #header-menu {
     padding: var(--padding-md);
     background-color: var(--color-red);
+    grid-column: span 2;
 }
 
 #main-content-container {
-    padding: var(--padding-lg);
+    display: grid;
+    grid-template-columns: 240px auto;
+    grid-template-rows: 71px auto;
+    width: 100%;
+    height: 100vh;
 }
 
 .main-menu-container {
@@ -137,7 +156,6 @@ body {
 .task-item-status.task-completed, .task-item-status.task-pending {
     width: 24px;
     height: 24px;
-    background-color: black;
     border-radius: 50%;
 }
 
@@ -145,6 +163,34 @@ body {
     background-color: #a2aaaf;
     border: 2px solid #8a8f93;
 }
+
+#sidebar {
+    margin: var(--padding-md) 0;
+    border-right: 1px solid var(--color-border);
+}
+
+.main-sidebar-container {
+    display: flex;
+    flex-direction: column;
+    margin: var(--padding-md) 0;
+}
+
+.main-sidebar-container a {
+    position: relative;
+    display: flex;
+    padding-left: var(--padding-md);
+    align-items: center;
+    gap: var(--padding-md);
+    height: 56px;
+    transition: all .2s ease-in;
+}
+
+.main-sidebar-container a:hover {
+    padding-left: calc(var(--padding-md) + 10px);
+    background-color: var(--color-hover-side-link);
+    transition: all .2s ease-in;
+}
+
 
 /* Generic */
 
@@ -154,4 +200,12 @@ body {
 
 .text-center {
     text-align: center;
+}
+
+.icon-blue {
+    color: var(--color-primary-blue);
+}
+
+.icon-green {
+    color: var(--color-primary-green);
 }
