style: mudanças no template

--- a/global/global/partials/header.html
+++ b/global/global/partials/header.html
@@ -1,11 +1,18 @@
 <div class="main-menu-container">
-    <div class="search-task">
-        <form id="search-task-form" action="" method="GET">
-            <div class="search-container">
-                <input class="search-container-input" type="text" name="q" placeholder="Search a task"/>
-                <i class="fa-solid fa-magnifying-glass search-container-icon"></i>
-            </div>
-        </form>
+    <div class="user-interaction">
+        <div id="toggle-bar">
+            <svg width="24px" height="3px" class="toggle-bar-icon toggle-bar-st"><rect width="24px" height="2px"/></svg>
+            <svg width="24px" height="3px" class="toggle-bar-icon toggle-bar-nd"><rect width="24px" height="2px"/></svg>
+            <svg width="24px" height="3px" class="toggle-bar-icon toggle-bar-th"><rect width="24px" height="2px"/></svg>
+        </div>
+        <div class="search-task">
+            <form id="search-task-form" action="" method="GET">
+                <div class="search-container">
+                    <input class="search-container-input" type="text" name="q" placeholder="Search a task"/>
+                    <i class="fa-solid fa-magnifying-glass search-container-icon"></i>
+                </div>
+            </form>
+        </div>
     </div>
     <div class="user-management-options">
         <a href="#" class="user-link" aria-label="Menu de usuário">
