--- a/global/global/partials/sidebar.html
+++ b/global/global/partials/sidebar.html
@@ -1,10 +1,10 @@
 <div class="main-sidebar-container">
     <a href="#">
-        <i class="fa-solid fa-list-ol icon-green"></i>
+        <i class="fa-solid fa-list-ol"></i>
         <h3 class="sidebar-link">Your tasks</h3>
     </a>
     <a href="#">
-        <i class="fa-solid fa-plus icon-blue"></i>
+        <i class="fa-solid fa-plus"></i>
         <h3 class="sidebar-link">Create a task</h3>
     </a>
 </div>
