style: mudanças no template

--- a/global/global/partials/sidebar.html
+++ b/global/global/partials/sidebar.html
@@ -1,5 +1,5 @@
 <div class="main-sidebar-container">
-    <a href="#">
+    <a href="{% url "todoapp:home" %}">
         <i class="fa-solid fa-list-ol"></i>
         <h3 class="sidebar-link">Your tasks</h3>
     </a>
