style: template responsivo para home

--- a/global/global/partials/sidebar.html
+++ b/global/global/partials/sidebar.html
@@ -1,10 +1,14 @@
 <div class="main-sidebar-container">
     <a href="{% url "todoapp:home" %}">
         <i class="fa-solid fa-list-ol"></i>
-        <h3 class="sidebar-link">Your tasks</h3>
+        <h3 class="sidebar-link">My tasks</h3>
     </a>
     <a href="#">
         <i class="fa-solid fa-plus"></i>
-        <h3 class="sidebar-link">Create a task</h3>
+        <h3 class="sidebar-link">New task</h3>
+    </a>
+    <a href="">
+        <i class="fa-solid fa-right-from-bracket"></i>
+        <h3 class="sidebar-link">Logout</h3>
     </a>
 </div>
