refactor: deixando o template mais genérico

--- a/global_templates/global/partials/sidebar.html
+++ b/global_templates/global/partials/sidebar.html
@@ -7,7 +7,7 @@
         <i class="fa-solid fa-plus"></i>
         <h3 class="sidebar-link">New task</h3>
     </a>
-    <a href="">
+    <a href="#">
         <i class="fa-solid fa-right-from-bracket"></i>
         <h3 class="sidebar-link">Logout</h3>
     </a>
