refactor: exibindo nome da task pelo próprio __str__

--- a/todoapp/templates/todoapp/view/home.html
+++ b/todoapp/templates/todoapp/view/home.html
@@ -23,7 +23,7 @@
                         {% endif %}
                     </div>
                     <div class="task-item-container">
-                    <div class="task-item-name">{{task.name}}</div>
+                    <div class="task-item-name">{{task}}</div>
                     <div class="task-item-desc">{{task.description}}</div>
                     </div>
                 </a>
