criando view task_create para criar novas tasks

--- a/global_templates/global/partials/sidebar.html
+++ b/global_templates/global/partials/sidebar.html
@@ -3,7 +3,7 @@
         <i class="fa-solid fa-list-ol"></i>
         <h3 class="sidebar-link">My tasks</h3>
     </a>
-    <a href="#">
+    <a href="{% url "todoapp:task_create" %}">
         <i class="fa-solid fa-plus"></i>
         <h3 class="sidebar-link">New task</h3>
     </a>
