--- a/todoapp/templates/todoapp/view/task_create.html
+++ b/todoapp/templates/todoapp/view/task_create.html
@@ -5,5 +5,12 @@
         <div class="content-container">
             <h3>Create your task</h3>
         </div>
+        <div class="content-container">
+            <form action="{% url "todoapp:task_create" %}" method='POST'>
+                {% csrf_token %}
+                {% include "todoapp/partials/form.html" %}
+                <input class="btn btn-primary" type="submit" value="Create">
+            </form>
+        </div>
     </div>
 {% endblock content %}
