feat: pesquisar task pelo nome ou descrição

--- a/todoapp/templates/todoapp/view/home.html
+++ b/todoapp/templates/todoapp/view/home.html
@@ -29,7 +29,7 @@
                 </a>
             {% empty %}
             <div class="table-task-row container-info">
-                <h3>Looks like you don't have any task.</h3>
+                <h3>No tasks were found.</h3>
             </div>
             {% endfor %}
         </div>
