--- a/global_static/global/css/default.css
+++ b/global_static/global/css/default.css
@@ -4,7 +4,8 @@
     --color-bg-light: #fefe;
     --color-bar-dark: #212529;
     --color-dark: #2f2f2f;
-    --color-primary-dark: #3d4348;
+    --color-primary-dark: #4c5358;
+    --color-text-dark-placeholder: #adadad;
     --color-hover-side-link: #ebdfdf;
     --color-dark-red: #af4646;
     --color-red: #da4d41;
@@ -118,6 +119,11 @@ body {
     transition: all .2s ease-out;
 }
 
+#search-task-form {
+    display: flex;
+    gap: var(--padding-md);
+}
+
 .search-container {
     position: relative;
     width: 100%;
@@ -136,7 +142,7 @@ body {
 }
 
 .search-container-input::placeholder {
-    color: var(--color-primary-dark);
+    color: var(--color-text-dark-placeholder);
     opacity: 1;
 }
 
@@ -147,6 +153,17 @@ body {
     font-size: 20px;
     left: 10px;
     top: 10px;
+}
+
+.search-task-button {
+    cursor: pointer;
+    color: var(--color-white);
+    font-size: 16px;
+    font-weight: bold;
+    padding: var(--padding-sm);
+    background: none;
+    border: 2px solid var(--color-white);
+    border-radius: 10px;
 }
 
 .content-container {
