--- a/global_templates/global/partials/header.html
+++ b/global_templates/global/partials/header.html
@@ -6,11 +6,12 @@
             <svg width="24px" height="3px" class="toggle-bar-icon toggle-bar-th"><rect width="24px" height="2px"/></svg>
         </div>
         <div class="search-task">
-            <form id="search-task-form" action="" method="GET">
+            <form id="search-task-form" action="{% url "todoapp:home" %}" method="GET">
                 <div class="search-container">
-                    <input class="search-container-input" type="text" name="q" placeholder="Search a task"/>
+                    <input class="search-container-input" type="search" name="q" placeholder="Search a task" required {% if search_term %}value="{{search_term}}"{% endif %}/>
                     <i class="fa-solid fa-magnifying-glass search-container-icon"></i>
                 </div>
+                <input class="search-task-button" type="submit" value="Search">
             </form>
         </div>
     </div>
