--- a/todoapp/templates/todoapp/view/home.html
+++ b/todoapp/templates/todoapp/view/home.html
@@ -7,7 +7,7 @@
         </div>
         <div class="content-container table-task-container-list">
             {% for task in page %}
-                <a href="#" class="table-task-row {% if task.is_completed %}task-completed{% else %}task-pending{% endif %}">
+                <a href="{% url "todoapp:task_update" task.id %}" class="table-task-row {% if task.is_completed %}task-completed{% else %}task-pending{% endif %}">
                     <div class="task-item-status-icon">
                         {% if task.is_completed %}
                             <i class="fa-solid fa-check"></i>
