--- a/global_templates/global/partials/header.html
+++ b/global_templates/global/partials/header.html
@@ -5,6 +5,7 @@
             <svg width="24px" height="3px" class="toggle-bar-icon toggle-bar-nd"><rect width="24px" height="2px"/></svg>
             <svg width="24px" height="3px" class="toggle-bar-icon toggle-bar-th"><rect width="24px" height="2px"/></svg>
         </div>
+        {% if user.is_authenticated %}
         <div class="search-task">
             <form id="search-task-form" action="{% url "todoapp:home" %}" method="GET">
                 <div class="search-container">
@@ -14,5 +15,6 @@
                 <input class="search-task-button" type="submit" value="Search">
             </form>
         </div>
+        {% endif %}
     </div>
 </div>
