--- a/global_templates/global/partials/sidebar.html
+++ b/global_templates/global/partials/sidebar.html
@@ -1,4 +1,5 @@
 <div class="main-sidebar-container">
+    {% if user.is_authenticated %}
     <a href="{% url "todoapp:home" %}">
         <i class="fa-solid fa-list-ol"></i>
         <h3 class="sidebar-link">My tasks</h3>
@@ -11,4 +12,14 @@
         <i class="fa-solid fa-right-from-bracket"></i>
         <h3 class="sidebar-link">Logout</h3>
     </a>
+    {% else %}
+    <a href="{% url "todoapp:login" %}">
+        <i class="fa-solid fa-list-ol"></i>
+        <h3 class="sidebar-link">Login</h3>
+    </a>
+    <a href="{% url "todoapp:register" %}">
+        <i class="fa-solid fa-plus"></i>
+        <h3 class="sidebar-link">Register</h3>
+    </a>
+    {% endif %}
 </div>
