--- a/todoapp/templates/todoapp/partials/form.html
+++ b/todoapp/templates/todoapp/partials/form.html
@@ -1,12 +1,14 @@
-{% for field in form %}
-<div class="form-field-control">
-    <label class="field-label" for="{{field.id_for_label}}">{{field.label}}</label>
-    {{field}}
-    {% if field.help_text %}
-    <div class="field-help-text">
-        <p>{{field.help_text}}</p>
-    </div>
-    {% endif %}
-    {{field.errors}}
+<div class="form-content-grid">
+    {% for field in form %}
+        <div class="form-field-control {{field.field.widget.attrs.class}}">
+            <label class="field-label" for="{{field.id_for_label}}">{{field.label}}</label>
+            {{field}}
+            {{field.errors}}
+            {% if field.help_text %}
+                <div class="field-help-text">
+                    <p>{{field.help_text}}</p>
+                </div>
+            {% endif %}
+        </div>
+    {% endfor %}
 </div>
-{% endfor %}
