--- a/todoapp/templates/todoapp/view/task_update.html
+++ b/todoapp/templates/todoapp/view/task_update.html
@@ -2,11 +2,11 @@
 {% block title %}{{title}}{% endblock title %}
 {% block content %}
     <div class="main-content">
-        <div class="content-container">
-            <h3>Update Task - {{task.name}}</h3>
+        <div class="content-container text-center">
+            <h2>Update Task - {{task.name}}</h2>
         </div>
         <div class="content-container">
-            <div class="task-form-container">
+            <div class="form-container">
                 <form action="" method="POST">
                     {% csrf_token %}
                     {% include "todoapp/partials/form.html" %}
